# bf-rust

./: .gitignore  Cargo.toml  Makefile  README.md
src/: error.rs  instruction.rs  interpret.rs  lib.rs  link.rs  main.rs  optimise.rs  transformers.rs  transpile.rs
src/instruction/: linked.rs  mod.rs  unlinked.rs
